2003-04-18  Roger Sayle  <roger@eyesopen.com>

	* rtlanal.c (reg_overlap_mentioned_p): Handle ZERO_EXTRACT
	and SIGN_EXTRACT.

2003-04-18  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/7675
	* c-typeck.c (build_external_ref): Set the DECL_NONLOCAL flag
	on VAR_DECL, PARM_DECL and FUNCTION_DECL from within
	nested functions if they refer to declarations from parent functions.
	* stmt.c (expand_decl): Don't put automatic variables in registers
	if the DECL_NONLOCAL flag is set.

2003-04-18  Hans-Peter Nilsson  <hp@bitrange.com>

	* gcse.c (compute_ld_motion_mems): For MEM destinations, only
	consider those to be movable where the source matches
	want_to_gcse_p.
	(update_ld_motion_stores): In comment, refer to
	compute_ld_motion_mems for validity of replacement.

Fri Apr 18 01:28:51 CEST 2003  Jan Hubicka  <jh@suse.cz>

	* gcov-dump.c (tag_summary): Remove max_sum
	* gcov-io.h (gcov_summary, gcov_write_summary, gcov_read_summary): Kill
	max_sum.
	* libgcov.c (gcov_exit): Do one pass over the data.  Make error message
	more verbose.

	* emit-rtl.c (subreg_hard_regno):  Check that register is representable.
	* reload.c (reload_inner_reg_of_subreg):  When register is not
	representable, reload the whole thing.
	(find_reloads): Likewsie.
	* rtlanal.c (subreg_representable_p):  New function.

	* profile.c (compute_branch_probabilities):  Cleanup sanity checking;
	allow negative probabilities for edges from the call to exit.
	(branch_prob): Do not add fake edges for functions that may return twice

2003-04-17  DJ Delorie  <dj@redhat.com>

	* toplev.c (target_options): Add value field.
	(set_target_switch): Handle target options with	values.
	* doc/tm.texi: Document how fixed vs variable target
	options work.
	* config/alpha/alpha.h, config/arc/arc.h, config/avr/avr.h,
	config/c4x/c4x.h, config/cris/aout.h, config/cris/cris.h,
	config/d30v/d30v.h, config/dsp16xx/dsp16xx.h,
	config/frv/frv.h, config/i386/i386.h, config/ia64/ia64.h,