@@ -1,3 +1,13 @@
+2003-04-18  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.c (SYMBOL_FLAG_NEAR, SYMBOL_FLAG_SAMEGP): Remove.
+	(alpha_end_function): Don't set them.
+	(decl_in_text_section): Remove.
+	(alpha_encode_section_info): Remove.
+	(samegp_function_operand): Use SYMBOL_REF LOCAL_P and EXTERNAL_P.
+	(direct_call_operand): Use SYMBOL_REF_DECL and compare actual
+	sections, rather than decl_in_text_section results.
+
 2003-04-18  Roger Sayle  <roger@eyesopen.com>
 
 	* rtlanal.c (reg_overlap_mentioned_p): Handle ZERO_EXTRACT
